<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context="com.andrew.examsapp.eerydictionary.user.LoginFragment">

	<EditText
		android:id="@+id/usernameEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:hint="@string/username_edit_text_hint"
		android:inputType="text"
		android:textColor="@color/text_color"
		android:textColorHint="@color/text_color"/>

	<EditText
		android:id="@+id/passwordEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/usernameEditText"
		android:layout_marginTop="2dp"
		android:ems="10"
		android:hint="@string/password_edit_text_hint"
		android:imeOptions="actionDone"
		android:inputType="textPassword"
		android:textColor="@color/text_color"
		android:textColorHint="@color/text_color"/>

	<Button
		android:id="@+id/loginButton"
		style="@style/MyButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/passwordEditText"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:text="@string/login_button_text"/>

	<TextView
		android:id="@+id/forgotTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/loginButton"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="8dp"
		android:text="Forgot password?"
		android:textColor="#ffdedede"/>

</RelativeLayout>
