<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.andrew.examsapp.eerydictionary.user.ChangePasswordActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">


		<ImageView
			android:id="@+id/icChangePsw"
			android:layout_width="match_parent"
			android:layout_height="120dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:contentDescription="@string/logo_image_text"
			android:src="@drawable/ic_elephant"/>

		<EditText
			android:id="@+id/changePswEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/icChangePsw"
			android:layout_marginTop="16dp"
			android:ems="10"
			android:imeOptions="actionDone"
			android:hint="@string/new_password_edit_text_hint"
			android:inputType="textPassword"
			android:textColor="@color/text_color"
			android:textColorHint="@color/text_color"/>

		<Button
			android:id="@+id/changePswButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chg_psw_button_text"
			android:layout_below="@+id/changePswEditText"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="64dp"/>

		<TextView
			android:id="@+id/messChgPswTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/ncErr"
			style="@style/MessageErr"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RelativeLayout>

</RelativeLayout>
