<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.andrew.examsapp.eerydictionary.SendFeedbackActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/feedback_spinner_title"
			android:id="@+id/spinnerTextView"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

		<Spinner
			android:id="@+id/typeSpinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/spinnerTextView"
			android:layout_alignParentStart="true"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/otherType"
			android:layout_below="@+id/typeSpinner"
			android:layout_alignParentLeft="true"
			android:hint="@string/feedback_type_edit_text_hint"
			android:maxLines="3"
			android:layout_alignParentStart="true"
			android:visibility="visible"/>

		<EditText
			android:id="@+id/feedbackEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/otherType"
			android:gravity="top|left"
			android:layout_marginTop="16dp"
			android:hint="@string/feedback_edit_text_hint"
			android:inputType="textCapSentences|textMultiLine"
			android:lines="8"
			android:maxLines="15"
			android:minLines="6"
			android:scrollbars="vertical"/>


	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/ncErr"
			style="@style/MessageErr"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RelativeLayout>

</RelativeLayout>
