<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.andrew.examsapp.eerydictionary.user.MainUserActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/networkLayout"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">


		<ImageView
			android:id="@+id/icon"
			android:layout_width="match_parent"
			android:layout_height="120dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:contentDescription="@string/logo_image_text"
			android:src="@drawable/ic_elephant"/>


		<RadioGroup
			android:id="@+id/radioGroup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/icon"
			android:layout_marginTop="16dp"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/radioLogin"
				style="@style/MyRadioLeft"
				android:checked="true"
				android:drawableLeft="@drawable/my_radio_holo_light"
				android:onClick="onRadioButtonClicked"
				android:text="@string/sign_in_radio"/>

			<RadioButton
				android:id="@+id/radioRegister"
				style="@style/MyRadioLeft.MyRadioRight"
				android:layout_gravity="center"
				android:drawableRight="@drawable/my_radio_holo_light"
				android:onClick="onRadioButtonClicked"
				android:text="@string/sign_up_radio"/>
		</RadioGroup>


		<FrameLayout
			android:id="@+id/frameContainer"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/radioGroup">

		</FrameLayout>

	</RelativeLayout>


	<RelativeLayout
		android:id="@+id/networkLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/ncErr"
			style="@style/MessageErr"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RelativeLayout>

</RelativeLayout>
