<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.andrew.examsapp.eerydictionary.fragments.MainFragment">

	<RelativeLayout
		android:id="@+id/mainLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<EditText
			android:id="@+id/wordInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_marginRight="16dp"
			android:layout_toLeftOf="@+id/searchButton"
			android:layout_toStartOf="@+id/searchButton"
			android:hint="@string/word_hint_text"
			android:imeOptions="actionSearch"
			android:inputType="textCapSentences"/>

		<Button
			android:id="@+id/searchButton"
			style="@style/MyButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:layout_gravity="center"
			android:text="@string/search_button_text"/>

		<ListView
			android:id="@+id/wordsListView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/searchButton"
			android:layout_marginTop="16dp"
			android:divider="@color/main_color"
			android:dividerHeight="2dp"
			android:listSelector="@drawable/gray_selector"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/no_words_found_text"
			android:id="@+id/noWordsFoundButton"
			android:drawableTop="@drawable/ic_no_words_found"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:visibility="gone"/>


	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/ncErr"
			style="@style/MessageErr"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RelativeLayout>

</RelativeLayout>