<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.andrew.examsapp.eerydictionary.EditWordActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin">

			<TextView
				android:id="@+id/textView6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:text="@string/description_text"/>

			<EditText
				android:id="@+id/editDescriptionEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/textView6"
				android:gravity="top|left"
				android:inputType="textCapSentences|textMultiLine"
				android:minLines="3"/>


			<TextView
				android:id="@+id/textView8"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/editDescriptionEditText"
				android:layout_marginTop="16dp"
				android:text="@string/examples_text"/>

			<EditText
				android:id="@+id/editExamplesEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/textView8"
				android:gravity="top|left"
				android:inputType="textCapSentences|textMultiLine"
				android:minLines="3"/>

			<Button
				android:id="@+id/editWordButton"
				style="@style/MyButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/editExamplesEditText"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="16dp"
				android:onClick="editWordButtonClick"
				android:text="@string/edit_word_text"/>
		</RelativeLayout>

	</ScrollView>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/ncErr"
			style="@style/MessageErr"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RelativeLayout>

</RelativeLayout>
