<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				tools:context="com.andrew.examsapp.eerydictionary.WordActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<ScrollView
			android:id="@+id/scrollView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_above="@+id/tableLayout"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_marginBottom="8dp">


			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/addedByTextView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:layout_alignParentTop="true"
					android:text="@string/added_by_text"/>

				<TextView
					android:id="@+id/textView5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true"
					android:layout_alignParentTop="true"
					android:text="@string/description_text"/>

				<TextView
					android:id="@+id/descriptionTextView"
					style="@style/BoxForText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true"
					android:layout_below="@+id/textView5"
					android:layout_marginTop="8dp"
					android:text="Description go here..."
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<TextView
					android:id="@+id/textView7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true"
					android:layout_below="@+id/descriptionTextView"
					android:layout_marginTop="32dp"
					android:text="@string/examples_text"/>

				<TextView
					android:id="@+id/examplesTextView"
					style="@style/BoxForText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true"
					android:layout_below="@+id/textView7"
					android:layout_marginTop="8dp"
					android:text="Examples go here..."
					android:textAppearance="?android:attr/textAppearanceMedium"/>

			</RelativeLayout>

		</ScrollView>


		<TableLayout
			android:id="@+id/tableLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">
			<!-- buttons -->
			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<Button
					android:id="@+id/likeButton"
					style="@style/LikeButton"
					android:drawableLeft="@drawable/ic_like"/>

				<Button
					android:id="@+id/dislikeButton"
					style="@style/LikeButton.DislikeButton"
					android:drawableRight="@drawable/ic_dislike"/>
			</TableRow>
			<!-- bars -->
			<TableRow
				android:id="@+id/appreciationRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/likeBar"
					style="@style/AppreciationBar"
					android:layout_gravity="start"
					android:background="@color/main_color"/>

				<TextView
					android:id="@+id/dislikeBar"
					style="@style/AppreciationBar"
					android:layout_gravity="end"
					android:background="#ffa4a4a4"/>
			</TableRow>
		</TableLayout>
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/ncErr"
			style="@style/MessageErr"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RelativeLayout>

</RelativeLayout>